Display next item correctly on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -193,6 +193,8 @@ table#statsTable * {
 	}
 	#itemNavNext {
 		margin: auto;
+		display: flex;
+		flex-direction: column-reverse;
 	}
 }
 @media screen and (min-width: 768px) {
